@@ -1,6 +1,7 @@
 // This file may be redistributed and modified only under the terms of
 // the GNU Lesser General Public License (See COPYING for details).
 // Copyright (C) 2000 Aloril
+// Copyright (C) 2005 Al Riddoch
 
 #ifndef ATLAS_OBJECTS_OBJECTFACTORY_H
 #define ATLAS_OBJECTS_OBJECTFACTORY_H
@@ -34,6 +35,7 @@ class Factories
 public:
     bool hasFactory(const std::string& name);
     Root createObject(const std::string& name);
+    Root createObject(const Atlas::Message::MapType & msg);
     std::list<std::string> getKeys();
     int addFactory(const std::string& name, FactoryMethod method);
 private:
@@ -44,7 +46,7 @@ extern std::map<const std::string, Root> objectDefinitions;
 extern Factories objectFactory;
 //extern Factories objectInstanceFactory;
 
-Root messageElement2ClassObject(const Atlas::Message::MapType & mobj);
+Root messageElement2ClassObject(const Atlas::Message::MapType & msg);
 
 } } // namespace Atlas::Objects
 
